# NamingTool

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
config/: settings.py  urls.py
css/: style.css
js/: app.js
naming/: admin.py  apps.py  forms.py  models.py  urls.py  views.py  vocab.py  vocabulary.yaml
naming/migrations/: 0001_initial.py  0002_resourcegroup_resource_group.py  0003_alter_resource_group.py  0004_remove_resource_group_resource_groups.py  0005_remove_resource_unique_resource_identity_and_more.py
naming/static/naming/css/: style.css
naming/static/naming/js/: app.js
naming/templates/naming/: base.html  dashboard.html  group_delete.html  group_detail.html  group_form.html  group_list.html  home.html  resource_create.html  resource_delete.html  resource_detail.html  resource_edit.html  resource_list.html  vocabulary.html
naming/templates/registration/: login.html  register.html
naming/templatetags/: naming_tags.py
tests/: conftest.py  test_app.py  test_templatetags.py  test_urls.py  test_views.py  test_vocab.py
tests/fixtures/: test_vocabulary.yaml
